# api-abstraction

./: .gitignore  LICENSE  README.md
lib/api_abstraction/: README.md  api.py  base_api.py  pyproject.toml
lib/api_abstraction/src/api_abstraction_capiv/: api.py  base_api.py
